--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
         <input type="text" name="message" placeholder="Message">
         <button type="submit">Send</button>
     </form>
+    <button id="send-location">Send Location</button>
 
     <script src="/socket.io/socket.io.js"></script>
     <script
