--- a/public/index.html
+++ b/public/index.html
@@ -5,18 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
-<body>
-    <p>Welcome to the chat app</p>
-    <ol id="messages">
-        
-    </ol>
+<body class="chat">
+    <div class="chat__sidebar">
+        <h3>People</h3>
 
-    <form id="message-form">
-        <input type="text" name="message" placeholder="Message">
-        <button type="submit">Send</button>
-    </form>
-    <button id="send-location">Send Location</button>
+        <div id="users">
+
+        </div>
+    </div>
+
+    <div class="chat__main">
+        <ol id="messages" class="chat__messages">
+
+        </ol>
+    
+        <div class="chat__footer">
+            <form id="message-form">
+                <input type="text" name="message" placeholder="Message" autocomplete="off" autofocus>
+                <button type="submit">Send</button>
+            </form>
+            <button id="send-location">Send Location</button>
+        </div>
+    </div>
 
     <script src="/socket.io/socket.io.js"></script>
     <script
