--- a/public/index.html
+++ b/public/index.html
@@ -4,65 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Join | ChatApp</title>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
-<body class="chat">
-    <div class="chat__sidebar">
-        <h3>People</h3>
+<body class="centered-form">
+    <div class="centered-form__form">
+        <form action="/chat.html">
+            <div class="form-field">
+                <h3>Join a Chat</h3>
+            </div>
 
-        <div id="users">
+            <div class="form-field">
+                <label for="display">Display name</label>
+                <input type="text" id="display" name="name" autofocus autocomplete="off">
+            </div>
 
-        </div>
+            <div class="form-field">
+                <label for="room">Room name</label>
+                <input type="text" id="room" name="name" autocomplete="off">
+            </div>
+
+            <div class="form-field">
+                <button type="submit">Join</button>
+            </div>
+        </form>
     </div>
-
-    <div class="chat__main">
-        <ol id="messages" class="chat__messages">
-
-        </ol>
-    
-        <div class="chat__footer">
-            <form id="message-form">
-                <input type="text" name="message" placeholder="Message" autocomplete="off" autofocus>
-                <button type="submit">Send</button>
-            </form>
-            <button id="send-location">Send Location</button>
-        </div>
-    </div>
-
-    <script id="message-template" type="text/template">
-        <li class="message">
-            <div class="message__title">
-                <h4>{{from}}</h4>
-                <span>{{createdAt}}</span>
-            </div>
-
-            <div class="message__body">
-                <p>{{text}}</p>
-            </div>
-        </li>
-    </script>
-
-    <script id="location-message-template" type="text/template">
-        <li class="message">
-            <div class="message__title">
-                <h4>{{from}}</h4>
-                <span>{{createdAt}}</span>
-            </div>
-
-            <div class="message__body">
-                <p><a href="{{url}}" target="_blank">My current location</a></p>
-            </div>
-        </li>
-    </script>
-
-    <script src="/socket.io/socket.io.js"></script>
-    <script
-  src="https://code.jquery.com/jquery-3.3.1.min.js"
-  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-  crossorigin="anonymous"></script>
-    <script src="/js/libs/moment.min.js"></script>
-    <script src="/js/libs/mustache.js"></script>
-    <script src="/js/index.js"></script>
 </body>
 </html>
