Add Users class and updateUserList event

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 
             <div class="form-field">
                 <label for="room">Room name</label>
-                <input type="text" id="room" name="name" autocomplete="off">
+                <input type="text" id="room" name="room" autocomplete="off">
             </div>
 
             <div class="form-field">
